<resources>
    <string name="app_name">FoodNet</string>
    <string name="food">Food</string>
    <string name="expDate">Expiration Date</string>
    <string name="prodDate">Production Date</string>
    <string name="openingDate">Opening Date</string>
    <string name="save">Save</string>
    <string name="foodHint">Food name</string>
    <string name="prodDateHint">Production date</string>
    <string name="expDateHint">Expiration date</string>
    <string name="openingDateHint">Opening date</string>
    <string name="channel_name">FoodNet</string>
    <string name="channel_description">Notify the user about food reaching expiration</string>
    <string name="notification_title">Your food is going to expire</string>
    <string name="notification_content">The food named %s is going to expire soon</string>
    <string name="account">Account</string>
    <string name="group">Group</string>
    <string name="textViewInviteTitle">Manage people that could see, add or remove food</string>
    <string name="done">Done</string>
    <string name="camera_permission_denied">Camera permission has been denied. You won\'t be able to scan QR codes!</string>
    <string name="invalid_qr_code">The scanned QR code is not valid.</string>
    <string name="freezer">Freezer</string>
    <string name="fridge">Fridge</string>
    <string name="cupboard">Cupboard</string>
    <string name="all">All</string>
    <string name="qr_print_content_desc">Print few randomly generated QR code</string>
    <string name="scan_qr_content_desc">Scan a QR code</string>
    <string name="delete_button_content_desc">Delete</string>
    <string name="show_qr_code_content_desc">Show QR code for group invitation</string>
    <string name="scan_qr_invite_content_desc">Scan QR code to join group</string>
    <string name="qr_code_image_content_desc">QR code for group invitation</string>
    <string name="location_icon_content_desc">Storage location icon</string>
    <string name="date_field_content_desc">Date field</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_title">Delete Account Permanently?</string>
    <string name="delete_account_message">This will permanently delete your account, remove you from all groups, and delete all your data. This action cannot be undone.</string>
    <string name="delete_account_confirm">Delete Forever</string>
    <string name="delete_account_cancel">Cancel</string>
    <string name="delete_account_progress">Deleting account data…</string>
    <string name="delete_account_success">Account deleted successfully</string>
    <string name="delete_account_error">Failed to delete account: %s</string>
    <string name="delete_account_auth_required">Please sign in again to delete your account</string>
</resources>